Fix: BEM nomenclature and alignment

--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,14 @@
 main {
   height: 100vh;
-  padding-top: 100px;
+  padding-top: 4em;
   padding-bottom: 80px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  align-self: center;
+  justify-self: center;
+  gap: 3em;
+  width: 80%;
 }
 /*.card(sollte jetzt main sein) {
   display: flex;
@@ -16,16 +23,19 @@ main {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
+  align-items: center;
   width: 100%;
   height: 40vh;
   position: relative;
+  padding-bottom: 15%;
+  padding-top: 5%;
 }
 .card__corner-icon /*.--inactive*/ {
   height: 7vh;
   filter: invert(100%);
   position: absolute;
-  top: -1.5rem;
-  right: 0.3rem;
+  top: -1.5em;
+  right: 0.3em;
 }
 /*.card__corner-icon .--active {
   height: 7vh;
@@ -36,14 +46,14 @@ main {
 }*/
 .card__question {
   align-self: center;
-  font-size: 1rem;
+  font-size: 1em;
 }
 .card__show-answer /*.--inactive*/ {
   border-style: solid;
   width: fit-content;
   padding: 10px;
   align-self: center;
-  font-size: 0.8rem;
+  font-size: 0.8em;
 }
 /*.card__show-answer .--active {
   border-style: solid;
@@ -56,6 +66,9 @@ main {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
+  position: absolute;
+  bottom: 1em;
+  left: 1em;
   width: 40%;
 }
 .categories__html,
@@ -63,4 +76,5 @@ main {
 .categories__flexbox {
   border-style: solid;
   border-radius: 0.4em;
+  padding: 0.2em;
 }
